added cards methods
